--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,9 @@
-# .github/workflows/deploy.yml
-name: Terraform and Ansible Deployment
+name: Deploy to AWS  # Add a workflow name
 
 on:
   push:
     branches:
-      - main
+      - main  # This will run the workflow on push to the main branch
 
 jobs:
   deploy:
@@ -17,6 +16,13 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
 
+      - name: Configure AWS Credentials
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: echo "AWS Credentials Configured"
+
       - name: Terraform Init
         run: terraform init
         working-directory: terraform
@@ -24,13 +30,3 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve
         working-directory: terraform
-
-      - name: Set up Ansible
-        run: sudo apt update && sudo apt install -y ansible
-
-      - name: Run Ansible Playbook
-        run: |
-          echo "[web]" > ansible/inventory.ini
-          echo "$(terraform output -raw public_ip) ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/my-key.pem" >> ansible/inventory.ini
-          ansible-playbook -i ansible/inventory.ini ansible/playbook.yml
-        working-directory: ansible
