--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,22 @@ jobs:
             fi
             echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
         working-directory: terraform
+        
+      - name: Wait for EC2 Instance
+        run: sleep 30  # Wait for 30 seconds before attempting SSH
+
+      - name: Check EC2 Connectivity
+        run: |
+          for i in {1..5}; do
+            if ping -c 1 $EC2_IP; then
+              echo "EC2 is reachable!"
+              break
+            fi
+            echo "Retrying in 10 seconds..."
+            sleep 10
+          done
+  
+ 
 
       - name: Setup SSH Private Key
         run: |
