--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,12 @@ jobs:
       - name: Wait for EC2 Instance
         run: sleep 30  # Wait for 30 seconds before attempting SSH
 
+      - name: Get EC2 Public IP
+        run: |
+          echo "EC2_IP=$(terraform output -raw public_ip | tr -d '\n')" >> $GITHUB_ENV
+          working-directory: terraform
+
+
       - name: Check EC2 Connectivity
         run: |
           for i in {1..5}; do
