--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,45 +45,29 @@ jobs:
 
       - name: Get Terraform Output
         run: |
-            EC2_IP=$(terraform output -raw public_ip 2>/dev/null | tr -d '\n' || echo "")
+            EC2_IP=$(terraform output -raw public_ip | tr -d '\n')
             if [ -z "$EC2_IP" ]; then
               echo "Error: Could not retrieve EC2 public IP."
               exit 1
             fi
             echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
+            echo $EC2_IP > ec2_ip.txt  # Save IP to a text file
         working-directory: terraform
         
-      - name: Wait for EC2 Instance
-        run: sleep 30  # Wait for 30 seconds before attempting SSH
-
-      - name: Get EC2 Public IP
-        run: |
-          echo "EC2_IP=$(terraform output -raw public_ip | tr -d '\n')" >> $GITHUB_ENV
-        working-directory: terraform
-
-
-      - name: Check EC2 Connectivity
-        run: |
-          for i in {1..5}; do
-            if ping -c 1 $EC2_IP; then
-              echo "EC2 is reachable!"
-              break
-            fi
-            echo "Retrying in 10 seconds..."
-            sleep 10
-          done
-  
- 
+      - name: Wait for EC2 Instance to be Ready
+        run: sleep 30  # Wait for 60 seconds to allow instance to initialize
 
       - name: Setup SSH Private Key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H $EC2_IP >> ~/.ssh/known_hosts
+          ssh-keyscan -H $(cat ec2_ip.txt) >> ~/.ssh/known_hosts  # Use IP from file for SSH
 
       - name: SSH into EC2 and Deploy Ansible Playbook
         run: |
+          EC2_IP=$(cat ec2_ip.txt)  # Read the IP from the saved text file
+          echo "Using IP Address: $EC2_IP"
           ssh -i ~/.ssh/id_rsa ubuntu@$EC2_IP << 'EOF'
             sudo apt update -y
             sudo apt install -y ansible docker.io
