--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,14 +46,16 @@ jobs:
       - name: Get Terraform Output
         id: terraform-output
         run: |
-          EC2_IP=$(terraform output -raw public_ip | tr -d '\n')
+          EC2_IP=$(terraform output -raw public_ip)
           if [ -z "$EC2_IP" ]; then
             echo "Error: Could not retrieve EC2 public IP."
             exit 1
           fi
-          echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
-          echo $EC2_IP > ec2_ip.txt  # Save IP to a text file
-          echo "::set-output name=ip_address::$EC2_IP"
+          # Clean the IP address by removing any extra characters
+          CLEAN_IP=$(echo "$EC2_IP" | tr -d '\n' | sed 's/[^0-9.]//g')
+          echo "EC2_IP=$CLEAN_IP" >> $GITHUB_ENV
+          echo "$CLEAN_IP" > ec2_ip.txt
+          echo "IP address: $CLEAN_IP"
         working-directory: terraform
         
       - name: Wait for EC2 Instance to be Ready
@@ -64,12 +66,15 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ env.EC2_IP }} >> ~/.ssh/known_hosts
+          IP=$(cat ec2_ip.txt)
+          echo "Adding SSH key for IP: $IP"
+          ssh-keyscan -H "$IP" >> ~/.ssh/known_hosts
 
       - name: SSH into EC2 and Deploy Ansible Playbook
         run: |
-          echo "Using IP Address: ${{ env.EC2_IP }}"
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ env.EC2_IP }} << 'EOF'
+          IP=$(cat ec2_ip.txt)
+          echo "Using IP Address: $IP"
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@"$IP" << 'EOF'
             sudo apt update -y
             sudo apt install -y ansible docker.io
             sudo systemctl enable --now docker
