--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,7 +108,7 @@ jobs:
               -o StrictHostKeyChecking=no \
               -o UserKnownHostsFile=/dev/null \
               -o ConnectTimeout=30 \
-              ubuntu@$IP << 'EOF'
+              ec2-user@$IP << 'EOF'
             # Update and install dependencies
             sudo apt-get update -y
             sudo apt-get install -y ansible docker.io
