--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,58 +114,30 @@ jobs:
           sudo dnf update -y
           sudo dnf install -y docker git
           
-          # Configure firewall
-          sudo dnf install -y firewalld
-          sudo systemctl enable --now firewalld
-          sudo firewall-cmd --permanent --add-port=80/tcp
-          sudo firewall-cmd --reload
+          # Configure firewall (if enabled)
+          if sudo systemctl is-active --quiet firewalld; then
+            sudo firewall-cmd --permanent --add-port=80/tcp
+            sudo firewall-cmd --reload
+          fi
           
           # Start and enable Docker
           sudo systemctl enable --now docker
           sudo usermod -aG docker ec2-user
           
-          # Install Python and required packages
-          sudo dnf install -y python3 python3-pip
-          sudo pip3 install --upgrade pip
-          sudo pip3 install docker ansible-core
+          # Verify Docker is running
+          sudo systemctl status docker
           
-          # Create Ansible playbook
-          cat <<EOT > playbook.yml
-          ---
-          - name: Deploy Nginx Container
-            hosts: localhost
-            become: true
-            tasks:
-              - name: Ensure Docker SDK is installed
-                pip:
-                  name:
-                    - docker
-                    - requests>=2.26.0
-              
-              - name: Pull Nginx image
-                community.docker.docker_image:
-                  name: nginx
-                  source: pull
-
-              - name: Run Nginx container
-                community.docker.docker_container:
-                  name: nginx_server
-                  image: nginx
-                  state: started
-                  restart_policy: always
-                  ports:
-                    - "80:80"
-                  published_ports:
-                    - "80:80"
-          EOT
+          # Create direct Docker command (simpler than Ansible for debugging)
+          sudo docker run -d \
+            --name nginx_server \
+            --restart unless-stopped \
+            -p 80:80 \
+            nginx
           
-          # Execute playbook
-          /usr/local/bin/ansible-playbook playbook.yml -v
+          # Wait for container to initialize
+          sleep 15
           
-          # Wait for container to start
-          sleep 10
-          
-          # Verification and debugging
+          # Debugging information
           echo "=== Docker Containers ==="
           sudo docker ps -a
           
@@ -173,8 +145,15 @@ jobs:
           sudo docker logs nginx_server
           
           echo "=== Port Binding Check ==="
-          sudo netstat -tulnp | grep 80 || true
+          sudo ss -tulnp | grep 80 || true
+          sudo iptables -t nat -L -n -v | grep 80 || true
           
-          echo "=== Curl Test ==="
-          curl -v http://localhost:80 || curl -v http://127.0.0.1:80
+          echo "=== Container Inspection ==="
+          sudo docker inspect nginx_server | grep -A 10 HostConfig
+          
+          echo "=== Final Curl Test ==="
+          curl -v --retry 3 --retry-delay 5 http://127.0.0.1:80 || \
+          (echo "Curl failed, trying alternative methods..." && \
+           sudo docker exec nginx_server curl -I http://localhost && \
+           sudo docker exec nginx_server nginx -t)
           EOF
